--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-openweather.app.id=
-spotify.client.id=
-spotify.secret.key=
+openweather.app.id=${OPEN_WEATHER_APP_ID}
+spotify.client.id=${SPOTIFY_CLIENT}
+spotify.secret.key=${SPOTIFY_SECRET}
