--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 			<version>2.4.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.mockk</groupId>
+			<artifactId>mockk</artifactId>
+			<version>1.12.0</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<repositories>
